fixed overflow issues

--- a/style.css
+++ b/style.css
@@ -42,6 +42,7 @@ body {
 #content {
     flex: 1 0 auto;
     margin-top: 100px;
+    overflow: hidden;
 }
 footer {
     flex-shrink: 0;
